--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --black:#000000;
 }
 
+/* Global Styles */
+
 *{
   margin: 0;
   padding: 0;
@@ -49,11 +51,18 @@ h3{
   outline: none;
 }
 
-.container{
+.fluid__container{
   margin: 0 auto;
   padding-top: 8vh;
   max-width: 130rem;
   width: 90%;
+}
+
+.container__styles{
+    background-color: var(--black);
+    color: var(--white);
+    opacity: .9;
+    height: 100vh;
 }
 
 
