--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root{
   --white:#ffffff;
-  --buttonColor:#04acbb;
+  --buttonColor:linear-gradient(to right, #1fa2ff, #12d8fa, #4de88e);
   --black:#000000;
 }
 
@@ -14,7 +14,6 @@
 html{
   font-family: 'Montserrat', sans-serif;
   font-size: 62.5%;
-  height: 100%;
 }
 body{
   height: 100%;
@@ -22,6 +21,7 @@ body{
 img{
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 p{
   font-size: 1.6rem;
@@ -31,6 +31,9 @@ h2{
 }
 h3{
   font-size: 3.5rem;
+}
+h4{
+  font-size: 2.2rem;
 }
 
 .mb_1{
@@ -46,7 +49,6 @@ h3{
 
 .btn{
   border: none;
-  border-radius: .3rem;
   cursor: pointer;
   outline: none;
 }
@@ -62,7 +64,7 @@ h3{
     background-color: var(--black);
     color: var(--white);
     opacity: .9;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 
