--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -8,7 +8,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1rem;
+    /* padding: 1rem; */
+    position: relative;
     max-width: 40rem;
     width: 95%;
     z-index: 1000;
