--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -42,10 +42,7 @@
 .navigation__icon{
     font-size: 1.4rem;
 }
-.search__icon{
-    cursor: pointer;
-    font-size: 1.6rem;
-}
+
 .login__button{
     border: 2px solid var(--white);
     border-radius: .3rem;
@@ -56,4 +53,11 @@
 }
 .logout{
     cursor: pointer;
+}
+
+
+
+
+@media (max-width:800px){
+
 }
