--- a/src/components/searchBar/searchBar.module.css
+++ b/src/components/searchBar/searchBar.module.css
@@ -1,54 +1,11 @@
-/* .search__box{
-    width: fit-content;
-    height: fit-content;
-    position: relative;
+.search__box{
+    
   }
   .search__input{
-    height: 5rem;
-    width: 5rem;
-    border-style: none;
-    padding: 1rem;
-    font-size: 1.4rem;
-    letter-spacing: .2rem;
-    outline: none;
-    border-radius: 2.5rem;
-    transition: all .5s ease-in-out;
-    background-color: #22a6b3;
-    padding-right: 4rem;
-    color:#fff;
+   
   }
-  .search__input::placeholder{
-    color:rgba(255,255,255,.5);
-    font-size: 1.8rem;
-    letter-spacing: .2rem;
-    font-weight: 100;
-  }
+  
   .btn__search{
-    width: 5rem;
-    height: 5rem;
-    border-style: none;
-    font-size: 1.8rem;
-    font-weight: bold;
-    outline: none;
-    cursor: pointer;
-    border-radius: 50%;
-    position: absolute;
-    right: 0px;
-    color:#ffffff ;
-    background-color:transparent;
-    pointer-events: painted;  
+     
   }
-  .btn__search:focus ~ .search__input{
-    width: 30rem;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
-  .search__input:focus{
-    width: 30rem;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  } */
+  
