--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -16,7 +16,7 @@
 }
 
 .logo{
-    width: 5rem;
+    max-width: 5rem;
 }
 
 .navigation{
@@ -43,6 +43,11 @@
     font-size: 1.4rem;
 }
 
+.mobile__icon{
+    font-size: 3rem;
+    display: none;
+}
+
 .login__button{
     border: 2px solid var(--white);
     border-radius: .3rem;
@@ -53,11 +58,36 @@
 }
 .logout{
     cursor: pointer;
+} 
+
+.navigation.active_mobile_menu{
+    transform: translateY(0);
+    z-index: 10;
+
 }
 
 
-
-
 @media (max-width:800px){
+    .mobile__icon{
+        display: block;
+    }
+    .navigation{
+        background-color: rgb(14, 14, 14);
+        justify-content: center;
+        height: 100vh;
+        position: absolute;
+        top: 7.5vh;
+        left: 0;
+        transform: translateY(-200%);
+        transition: 0.5s all ease;
+        width: 100%;
+        z-index: 1000;
+    }
+    .navigation__links{
+        align-items: flex-start;
+        flex-direction: column;
+        padding-top: 8rem;
+    }
 
+    
 }
