--- a/src/components/searchBar/searchBar.module.css
+++ b/src/components/searchBar/searchBar.module.css
@@ -1,11 +1,13 @@
 .search__box{
-    
+    margin: 3rem 0;
   }
   .search__input{
-   
-  }
-  
-  .btn__search{
-     
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    color: var(--white);
+    font-size: 1.8rem;
+    padding: 1rem;
+    outline: none;
   }
   
