--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,5 +1,7 @@
 .slider{
-   max-height: 80vh;
+   max-height: 70vh;
+   margin-top: 5rem;
+   margin-bottom: 20rem;
 }
 
 .slider__img{
@@ -8,4 +10,8 @@
 
 .slider__img img{
     object-fit: contain;
+}
+
+@media (max-width:800px){
+    
 }
